# bitweb

./: AUDIT_TABLE.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  README.md  README2.md  RELEASE_NOTES.md  SECURITY.md  vcpkg.json
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  good_first_issue.yml  gui_issue.yml
.github/workflows/: ci.yml
ci/: lint_imagefile
ci/lint/: 06_script.sh  container-entrypoint.sh
ci/test/: 00_setup_env_mac_native.sh  00_setup_env_native_centos.sh  02_run_container.sh  03_test_script.sh
cmake/: introspection.cmake  windows-app.manifest.in
cmake/module/: AddBoostIfNeeded.cmake  GenerateSetupNsi.cmake  Maintenance.cmake
cmake/script/: Coverage.cmake
contrib/: README.md  valgrind.supp
contrib/asmap/: README.md  asmap-tool.py
contrib/devtools/: README.md  copyright_header.py  gen-bitcoin-conf.sh  gen-manpages.py
contrib/guix/: INSTALL.md  README.md  guix-attest  guix-build  guix-codesign  manifest.scm  symbol-check.py
contrib/init/: bitcoind.init  bitcoind.service  bitwebd.init  bitwebd.service
contrib/linearize/: README.md  example-linearize.cfg  linearize-data.py  linearize-hashes.py
contrib/macdeploy/: README.md  detached-sig-create.sh  (+1 more)
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  assumeutxo.md  benchmarking.md  bitweb-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  build-windows.md  cjdns.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-process.md  tor.md  tracing.md  zmq.md
share/: setup.nsi.in
src/: .clang-tidy  CMakeLists.txt  addresstype.h  addrman.cpp  arith_uint256.h  bip324.cpp  bitcoin-chainstate.cpp  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-res.rc  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util-res.rc  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoin.cpp  bitcoind-res.rc  bitcoind.cpp  chain.h  chainparams.cpp  chainparamsbase.cpp  chainparamsbase.h  clientversion.cpp  init.cpp  init.h  key.cpp  mapport.cpp  net_processing.cpp  netbase.h  pow.cpp  pow.h  txdb.cpp  validation.cpp  validation.h  versionbits.cpp
src/crypto/: CMakeLists.txt
src/crypto/argon2d/: core.c  opt.cpp  opt_avx2.cpp  opt_avx512.cpp
src/crypto/argon2d/blake2/: blake2.h  blake2b.c  blamka-round-opt.h
test/: README.md  fix_bip341_vectors.py  get_previous_releases.py
(+459 files in other folders)
